--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@color/pastel_brown"
+            android:background="#816F56"
             app:headerLayout="@layout/nav_header"
             app:menu="@menu/nav_drawer"
             tools:layout="@layout/fragment_home" />
