--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="quincy">#FF665A48</color>
-    <color name="light_silver">#FFD9D9D9</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="platinum">#EDE4E0</color>
-    <color name="pastel_brown">#816F56</color>
+<!--    <color name="colorAccent">#E0E0E0</color>-->
+<color name="colorAccent">@color/textColorPrimary</color>
+<color name="colorPrimary">#FF665A48</color>
+<color name="colorPrimaryDark">#FFD9D9D9</color>
+<color name="textColorPrimary">#FF03DAC5</color>
+<color name="toolbarIconColor">@color/textColorPrimary</color>
+<color name="textInputOutlineColor">#FF018786</color>
+<color name="navheader">#816F56</color>
+<color name="black">#000000</color>
+<color name="white">#FFFFFF</color>
+<color name="header">#F5E0E5</color>
+<color name="border">#ECC1CB</color>
+<color name="gray">#525252</color>
 </resources>
