with functional registration and login v2

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -83,6 +83,7 @@
             android:text="Sign Up now."
             android:textColor="#FFFFFF"
             android:textSize="14sp"
+            android:onClick="@{()->loginViewModel.signUP()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.523"
